# Aframp-backend

./: Cargo.toml  METRICS_REFERENCE.md  TODO.md  rate_limits.yaml
docs/: openapi_quickstart.md
docs/cngn/: README.md  overview.md  transaction-examples.md  troubleshooting.md  trustline-management.md  wallet-setup.md
migrations/: 20260324000000_api_key_scoping.sql  20260324000000_db_maintenance_worker.sql  20260324000000_onramp_processor_states.sql  20260324010000_batch_transactions.sql  20261001000000_create_settlement_schema.sql
src/: config.rs  lib.rs  main.rs
src/api/: batch.rs  mod.rs  onramp.rs  openapi.rs
src/api/admin/: mod.rs  scopes.rs
src/api/onramp/: initiate.rs  mod.rs
src/cache/: cache.rs
src/chains/stellar/: mod.rs  service.rs  stellar_service_tests.rs
src/database/: bill_payment_repository.rs  settlement.rs  settlement_repository.rs
src/metrics/: handler.rs  mod.rs  tests.rs
src/middleware/: api_key.rs  metrics.rs  mod.rs  rate_limit.rs
src/payments/: factory.rs  types.rs
src/payments/providers/: mock.rs  mod.rs
src/services/: bank_verification.rs  cngn_trustline.rs  payment.rs  payment_orchestrator.rs  transaction.rs
src/telemetry/: middleware.rs  propagation.rs  tracer.rs
src/workers/: batch_processor.rs  maintenance.rs  mod.rs  offramp_processor.rs  onramp_processor.rs  payment_poller.rs  settlement_metadata.rs  transaction_monitor.rs
src/workers/bill_processor/: mod.rs  providers.rs  refund_handler.rs  worker.rs
tests/: bill_payment_lifecycle_test.rs  maintenance_worker_integration.rs  offramp_lifecycle_test.rs  onramp_processor_test.rs  payment_poller_integration.rs  rate_limit_test.rs  tracing_integration.rs
